--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vitest": "^0.34.4"
+  },
+  "dependencies": {
+    "axios": "^1.5.1"
   }
 }
