--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "notu",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "type": "module",
+  "main": "dist/notu.js",
+  "unpkg": "dist/notu.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/jamescoyle1989/notu.git"
