--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "notu",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "type": "module",
   "main": "dist/notu.js",
   "unpkg": "dist/notu.js",
@@ -21,6 +21,7 @@
   "devDependencies": {
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
+    "vite-plugin-dts": "^3.6.3",
     "vitest": "^0.34.4"
   },
   "dependencies": {
