--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "notu",
-  "version": "0.2.6",
+  "version": "0.2.7",
   "type": "module",
   "main": "dist/index.js",
   "unpkg": "dist/index.js",
+  "types": "dist/types/index.d.ts",
   "files": [
     "/dist"
   ],
