--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "notu",
-  "version": "0.2.7",
-  "type": "module",
-  "main": "dist/index.js",
-  "unpkg": "dist/index.js",
+  "version": "0.2.8",
+  "main": "dist/notu.js",
+  "unpkg": "dist/notu.js",
   "types": "dist/types/index.d.ts",
   "files": [
     "/dist"
