--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "notu",
-  "version": "0.2.8",
-  "main": "dist/notu.js",
-  "unpkg": "dist/notu.js",
+  "version": "0.2.9",
+  "main": "dist/notu.mjs",
+  "unpkg": "dist/notu.mjs",
   "types": "dist/types/index.d.ts",
   "files": [
     "/dist"
